--- a/package.yaml
+++ b/package.yaml
@@ -17,6 +17,10 @@ description:         Please see the README on GitHub at <https://github.com/rmeh
 
 dependencies:
 - base >= 4.7 && < 5
+- vector
+- distributive
+- adjunctions
+- comonad
 
 library:
   source-dirs: src
